--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -5,8 +5,13 @@
   margin-top: 6px;
 }
 .Navlink:hover {
-  color: #79cbca;
+  color: black;
+  text-decoration: none;
 }
 .Nav-bg {
-  background: linear-gradient(to right, #79cbca, #e684ae);
+  background: linear-gradient(to right, #2193b0, #6dd5ed);
+}
+.logo {
+  width: 20px;
+  height: 20px;
 }
