--- a/src/components/UserCards.css
+++ b/src/components/UserCards.css
@@ -4,8 +4,23 @@
   margin-right: 10px;
 }
 .buttonLink:hover {
-  color: rgba(219, 71, 133, 0.753);
+  color: black;
+  text-decoration: none;
 }
 .btn {
-  background: linear-gradient(to right, #79cbca, #e684ae);
+  background: linear-gradient(to right, #2193b0, #6dd5ed);
+}
+
+.user-img {
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.card-style {
+  width: 18rem;
+  border-radius: 4px;
+}
+.user-card {
+  margin-top: 150px;
 }
